Fixed background when on mobile

--- a/style.css
+++ b/style.css
@@ -1,65 +1,23 @@
-@keyframes move-twink-back {
-    from {background-position:0 0;}
-    to {background-position:-10000px 5000px;}
-}
-
-@keyframes move-clouds-back {
-    from {background-position:0 0;}
-    to {background-position:10000px 0;}
-}
-
-.stars, .twinkling, .clouds {
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  width:100%;
-  height:100%;
-  display:block;
-}
-
-.stars {
-  background:#000 url(stars.png) repeat top center;
-  z-index:0;
-}
-
-.twinkling{
-  background:transparent url(twinkling.png) repeat top center;
-  z-index:1;
-  animation:move-twink-back 200s linear infinite;
-}
-
-.clouds{
-    background:transparent url(clouds.png) repeat top center;
-    z-index:2;
-    opacity: .4;
-    animation:move-clouds-back 200s linear infinite;
-}
-
 /* global */
 @import url('https://fonts.googleapis.com/css?family=Consolas');
-
-.grid-2{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    position: relative;
-    z-index: 3;
-}
 
 body{
     margin: 0;
     padding: 0;
-    font-family: monaco,Consolas,Lucida Console,monospace;
+    font-family: Lucida Console,Monaco,Consolas,monospace;
     color: #85CC74;
     top:0;
     left:0;
     right:0;
     bottom:0;
-    width:100%;
-    height:100%;
-    position:absolute;
     background-color: #000000;
+}
+
+.grid-2{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    position: absolute;
+    min-height: 100%;
 }
 
 h2,.white{
@@ -74,6 +32,7 @@ a{
 .section-1{
     padding-top: 30vh;
     text-align: center;
+        z-index: 3;
 }
 
 .section-1 p{
@@ -95,6 +54,7 @@ a{
 .section-2{
     padding-top: 10vh;
     width: 70%;
+        z-index: 3;
 }
 
 .section-2 h2{
@@ -151,3 +111,42 @@ a{
 }
 
 .circular--square { border-radius: 50%; }
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+
+.stars, .twinkling, .clouds {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(stars.png) repeat top center;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(twinkling.png) repeat top center;
+  z-index:1;
+  animation:move-twink-back 200s linear infinite;
+}
+
+.clouds{
+    background:transparent url(clouds.png) repeat top center;
+    z-index:2;
+    opacity: .4;
+    animation:move-clouds-back 200s linear infinite;
+}
